--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -10,3 +10,5 @@ tertiary:
       Some of the notable bug fixes in 15.5 are:
 
       - [Progressively load CI/CD variable for 100+](https://gitlab.com/gitlab-org/gitlab/-/issues/372728).
+      - [Container Registry only showing 100 tags per image](https://gitlab.com/gitlab-org/gitlab/-/issues/359277).
+      - [NuGet packages with uppercase characters cannot be found](https://gitlab.com/gitlab-org/gitlab/-/issues/273664).
