--- a/data/team_members/person/a/apennells.yml
+++ b/data/team_members/person/a/apennells.yml
@@ -1,7 +1,7 @@
 name: Alex Pennells
 locality: 
 country: Remote
-role: <a href="/job-families/engineering/development/frontend/#senior-frontend-engineer">Senior Frontend Engineer</a>
+role: <a href="/job-families/engineering/development/frontend/#senior-frontend-engineer">Senior Frontend Engineer</a>, Plan:Optimize
 reports_to: brandon-l
 picture: apennells.jpg
 pronouns:
@@ -11,7 +11,9 @@ linkedin: alex-pennells-50aa8844
 gitlab: apennells
 departments:
   - Development
-specialty: "Optimize"
+  - Plan:Optimize FE Team
+specialty:
+- 'Plan: Optimize'
 expertise:
 story:
 
