Move the Open Source Program handbook under Community Programs

--- a/data/redirects.yml
+++ b/data/redirects.yml
@@ -1,3 +1,6 @@
+- sources: /handbook/marketing/community-relations/opensource-program/
+  target: /handbook/marketing/community-relations/community-programs/opensource-program/
+  comp_op: '='
 - sources: /handbook/marketing/community-relations/education-program/
   target: /handbook/marketing/community-relations/community-programs/education-program/
   comp_op: '='
