--- a/data/release_posts/unreleased/usability_improvements.yml
+++ b/data/release_posts/unreleased/usability_improvements.yml
@@ -16,3 +16,4 @@ tertiary:
       - [Separate issue actions from the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/96260)
       - [Improved layout for comments in the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95824)
       - [Remove user status and availability from the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95796)
+      - [Update sort order to 'Last created' when navigating from admin dashboard using 'View latest projects'](https://gitlab.com/gitlab-org/gitlab/-/issues/369483)
