--- a/data/features.yml
+++ b/data/features.yml
@@ -7112,9 +7112,9 @@ features:
     screenshot_url: 56-container-scanning.png
     category:
       - container_scanning
-    gitlab_core: false
+    gitlab_core: true
     gitlab_starter: false
-    gitlab_premium: false
+    gitlab_premium: true
     gitlab_ultimate: true
     pricing_page: true
     gitlab_com: true
