--- a/data/release_posts/unreleased/usability_improvements.yml
+++ b/data/release_posts/unreleased/usability_improvements.yml
@@ -17,3 +17,4 @@ tertiary:
       - [Improved layout for comments in the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95824)
       - [Remove user status and availability from the activity feed](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/95796)
       - [Update sort order to 'Last created' when navigating from admin dashboard using 'View latest projects'](https://gitlab.com/gitlab-org/gitlab/-/issues/369483)
+      - [Enhance activity menu on Vulnerability Report](https://gitlab.com/gitlab-org/gitlab/-/issues/370280)
