Offboarding MR for KH

--- a/data/team_members/person/a/amandawshen.yml
+++ b/data/team_members/person/a/amandawshen.yml
@@ -3,7 +3,7 @@ name: Amanda Shen
 locality:
 country: Remote
 role: <a href="">Corporate Events Coordinator</a>
-reports_to: khartline
+reports_to: dir-fld-mktg
 picture: amandashen.jpg
 pronouns: She/Her
 pronunciation:
