--- a/data/release_posts/15_4/ecosystem-streamline-top-bar-menu.yml
+++ b/data/release_posts/15_4/ecosystem-streamline-top-bar-menu.yml
@@ -5,7 +5,7 @@ features:
     documentation_link: 'https://design.gitlab.com/regions/navigation'
     image_url: '/images/15_4/ecosystem-top-bar-menu-update.png'
     reporter: cdybenko
-    stage: ecosystem
+    stage: manage
     categories:
     - 'Navigation & Settings'
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/366082'
