Adding TeamOps release to press release page on website

--- a/data/press_releases.yml
+++ b/data/press_releases.yml
@@ -577,3 +577,8 @@
 - title: "GitLab Reports Second Quarter Fiscal Year 2023 Financial Results"
   link: /press/releases/2022-09-06-gitlab-reports-second-quarter-fiscal-year-2023-financial-results.html
   date: 2022-09-06
+
+- title: "GitLab Introduces TeamOps, A New Practice For All Work Environments – Remote, Hybrid and In-Office"
+  link: /press/releases/2022-10-05-teamops-new-practice-for-work-environments.html
+  date: 2022-10-05
+
