Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
+++ b/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
@@ -1,7 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Allow updates to group members' SAML and SCIM extern_uid via API"
+  - name: "Allow owners to update group members' SAML and SCIM extern_uid via API"
     available_in: [silver, gold]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/user/group/saml_sso/#get-in-to-gitlabcom-with-saml'
