Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/manage-shift-option-to-prevent-users-from-creating-groups-to-insta.yml
+++ b/data/release_posts/unreleased/manage-shift-option-to-prevent-users-from-creating-groups-to-insta.yml
@@ -10,4 +10,4 @@ features:
     categories: [Subgroups]
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/367754'
     description: |
-      GitLab administrators and GitLab Dedicated administrators can now use the Admin Area to disable users' permission to create top-level groups. Previously, administrators with access to the instance's file system could change this setting only in the `gitlab.rb` file.
+      GitLab administrators can now use the Admin Area to disable users' permission to create top-level groups. Previously, administrators with access to the instance's file system could change this setting only in the `gitlab.rb` file.
