--- a/data/team_members/person/a/andrashorvath.yml
+++ b/data/team_members/person/a/andrashorvath.yml
@@ -13,9 +13,8 @@ departments:
   - Engineering Function
   - Development Department
   - Enablement Sub-department
-  - Gitaly Team
-  - Gitaly BE Team
+  - Gitaly Cluster Team
 specialty: Gitaly
 expertise:
-story: Andras is passionate about reliability and scalability, with a pragmatic approach to computer architectures and a 20-year history in systems administration and SRE. He is driven by the success and happiness of human beings. When not working, Andras learns and teaches karate, enjoys riding his motorcycle and cooking for his family. 
+story: Andras is passionate about reliability and scalability, with a pragmatic approach to computer architectures and a 20-year history in systems administration and SRE. He is driven by the success and happiness of human beings. When not working, Andras learns and teaches karate, enjoys riding his motorcycle and cooking for his family.
 
