--- a/data/team_members/person/k/knayakgl.yml
+++ b/data/team_members/person/k/knayakgl.yml
@@ -15,8 +15,7 @@ departments:
 - Engineering Function
 - Development Department
 - Enablement Sub-department
-- Gitaly Team
-- Gitaly BE Team
+- Gitaly Cluster Team
 projects:
   gitaly:
   - reviewer
