--- a/data/team_members/person/p/pks-t.yml
+++ b/data/team_members/person/p/pks-t.yml
@@ -13,8 +13,8 @@ departments:
   - Engineering Function
   - Development Department
   - Enablement Sub-department
-  - Gitaly Team
-  - Gitaly BE Team
+  - Gitaly Git Team
+  - Gitaly Cluster Team
 projects:
   gitaly:
     - reviewer
