--- a/data/team_members/person/w/will-chandler.yml
+++ b/data/team_members/person/w/will-chandler.yml
@@ -16,8 +16,7 @@ departments:
 - Engineering Function
 - Development Department
 - Enablement Sub-department
-- Gitaly Team
-- Gitaly BE Team
+- Gitaly Cluster Team
 specialty: Gitaly
 story: Will spent many years in support and loves a good performance puzzle. In his
   free time he enjoys using strace for fun and profit and herding his three boys.
