--- a/data/team_members/person/j/james-fargher.yml
+++ b/data/team_members/person/j/james-fargher.yml
@@ -12,8 +12,7 @@ departments:
   - Engineering Function
   - Development Department
   - Enablement Sub-department
-  - Gitaly Team
-  - Gitaly BE Team
+  - Gitaly Cluster Team
 projects:
   gitlab:
     - maintainer backend
