Update Maddie's role

--- a/data/team_members/person/m/maddievn.yml
+++ b/data/team_members/person/m/maddievn.yml
@@ -1,7 +1,7 @@
 name: Madelein van Niekerk
 locality: 
 country: Remote
-role: <a href="">Backend Engineer</a>
+role: <a href="">Backend Engineer, Global Search</a>
 reports_to: cliu
 picture: madeleinvanniekerk.jpg
 pronouns:
@@ -14,4 +14,3 @@ departments:
 specialty: "Global Search"
 expertise:
 story:
-
