Update Dylan's job title to Principal Engineer

--- a/data/team_members/person/d/dylan-g.yml
+++ b/data/team_members/person/d/dylan-g.yml
@@ -2,7 +2,7 @@
 name: Dylan Griffith
 locality:
 country: Remote
-role: <a href="/job-families/engineering/development/backend/">Staff Backend Engineer, Pods</a>
+role: <a href="/job-families/engineering/development/management/principal-engineer/">Principal Engineer, Pods</a>
 reports_to: gitlabbarry
 picture: dgriffith.jpg
 twitter:
